--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslinter": "^3.2.1",
     "nodemon": "^2.0.15",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "start:dev": "nodemon app.js"
+    "start:dev": "nodemon app.js",
+    "start:prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
