--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start:dev": "nodemon app.js",
-    "start:prod": "webpack --mode production"
+    "start:prod": "webpack --mode production && node ./dist/bundle.js"
   },
   "repository": {
     "type": "git",
